<resources>
	<!-- App Strings -->
	<string name="app_name">Project Fury</string>
	<string name="app_subtitle">Don\'t Get Angry, Get Organised</string>

	<!-- Title Strings -->
	<string name="title_activity_login">Login</string>
	<string name="title_activity_register">Register New Account</string>
	<string name="title_activity_dashboard">Dashboard</string>
	<string name="title_activity_createProject">Create a Project</string>
	<string name="title_activity_projectInfo">Project Information</string>
	<string name="title_activity_taskInfo">Task Information</string>
	<string name="title_activity_backlog">Backlog</string>
	<string name="title_activity_createTask">Create a Task</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_allBoards">All Boards</string>
	<string name="title_activity_projectBoard">Project Board</string>

	<!-- Button Strings -->
	<string name="button_login">Login</string>
	<string name="button_register">Register Here</string>
	<string name="button_createAccount">Create Account</string>
	<string name="button_createProject">Create Project</string>
	<string name="button_createProjectDashboard">+</string>
	<string name="button_projectInfo">Project</string>
	<string name="button_taskInfo">Task</string>
	<string name="button_addUser">Add User</string>
	<string name="button_removeMe">Remove Me</string>
	<string name="button_addColumn">Add Column</string>
	<string name="button_removeColumn">Remove Column</string>
	<string name="button_updateTask">Edit Task</string>
	<string name="button_editProject">Edit Project</string>
	<string name="button_saveProject">Save Project</string>
	<string name="button_deleteProject">Delete Project</string>
	<string name="button_removeTask">Delete Task</string>
	<string name="button_createTask">Create Task</string>
	<string name="button_projectBoard">To Board</string>
	<string name="button_saveTask">Save Task</string>
	<string name="button_dialogDelete"> Delete </string>
	<string name="button_dialogCancel"> Cancel </string>
	<string name="button_createColumn">Create</string>

	<!-- Dialogue Messages  -->
	<string name="dialog_deleteAlertTitle_project"> Delete Project? </string>
	<string name="dialog_deleteAlertInstructions_project"> This will permanently delete this Project and all of the attached Tasks </string>
	<string name="dialog_deleteAlertTitle_task">Delete Task?</string>
	<string name="dialog_deleteAlertInstructions_task">This will permanently delete this Task and all of the attached Sub-Tasks</string>
	<string name="dialog_deleteAlertTitle_column">Delete Column?</string>
	<string name="dialog_deleteAlertInstructions_column">This will permanently delete this Column, and move all the attached Tasks to the \'New\' Column</string>
	<string name="dialog_addAlertTitle_column">New Column</string>
	<string name="editText_dialogColumnName">Column Name</string>
	<string name="textView_dialogAddColumn">Please enter a Column name</string>

	<!-- TextView Strings -->
	<string name="textView_projectListTitle">Projects</string>
	<string name="textView_taskListTitle">Tasks</string>
	<string name="textView_taskColumn">Column</string>
	<string name="textView_registerInstructions">Please fill in all the below fields:</string>
	<string name="textView_userInstruction_login">Not a User?</string>
	<string name="textView_userInstruction_register">Already a User?</string>
	<string name="textView_projectInfoInstruction">Below is information about this Project:</string>
	<string name="textView_taskInfoInstruction">Below is information about this Task:</string>
	<string name="textView_priority">Priority</string>
	<string name="textView_task">Task</string>
	<string name="textView_assignee">Assignee</string>
	<string name="textView_noTasksFound">No Tasks found</string>
	<string name="textView_addColumnHeader">Columns</string>
	<string name="textView_noProjectsFound">No Projects found</string>
	<string name="textView_deleteInstruction">Swipe to Delete</string>
	<string name="textView_reorderInstruction">Hold and Drag to Reorder</string>

	<!-- Hints -->
	<string name="hint_username">Username</string>
	<string name="hint_email">Email</string>
	<string name="hint_password">Password</string>
	<string name="hint_confirmPassword">Confirm Password</string>
	<string name="hint_projectName">Project Name</string>
	<string name="hint_projectDescription">Project Description</string>
	<string name="hint_taskName">Task Name</string>
	<string name="hint_taskDescription">Task Description</string>
	<string name="hint_assigneeSpinner">Assignee</string>
	<string name="hint_prioritySpinner">Priority</string>
	<string name="hint_projectSpinner">Project</string>
	<string name="hint_columnName">Column Name</string>
	<string name="hint_columnSpinner">Column</string>

	<!-- Navigation Strings -->
	<string name="navigation_logOut">Log Out</string>
	<string name="navigation_open">Open</string>
	<string name="navigation_close">Close</string>

	<!-- Spinner Strings -->
	<string name="spinner_taskAssignee">Unassigned</string>
	<string-array name="spinner_priority">
		<item>Unassigned</item>
		<item>Low</item>
		<item>Normal</item>
		<item>High</item>
	</string-array>
	<string name="spinner_taskProject">Project</string>

	<!-- Error Strings -->
	<string name="error_message">Error with %1s</string>
	<string name="error_inProgress">%1s in progress, please wait&#8230;</string>
	<plurals name="error_minCharacters">
		<item quantity="one">Minimum of %1d character</item>
		<item quantity="other">Minimum of %1d characters</item>
	</plurals>
	<plurals name="error_maxCharacters">
		<item quantity="one">Maximum of %1d character</item>
		<item quantity="other">Maximum of %1d characters</item>
	</plurals>
	<string name="error_alreadyExists">%1s already exists</string>
	<string name="error_emailValidation">Please enter a valid email</string>
	<string name="error_confirmPasswordValidation">Passwords do not currently match</string>
	<string name="error_noInternetAccess">No Internet Access</string>
	<string name="error_invalidUsernamePassword">Invalid Username/Password</string>
	<string name="error_defaultError">Your request cannot be processed at this time</string>
	<string name="error_noCurrentProjects">No Current Projects</string>
	<string name="error_noCurrentTasks">No Current Tasks Assigned</string>
	<string name="error_refreshBoard">Please refresh board</string>
	<string name="error_underConstruction">This page is under construction, this will be filled in future updates</string>

	<!-- Misc -->
	<string name="alphaNumericCharacters">"1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "</string>

</resources>
