<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="20dp"
	android:orientation="vertical">

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/createTaskActivity_taskNameEditText"
			style="@style/EditTextStyle.Restrictive"
			android:hint="@string/hint_taskName"
			android:inputType="textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/createTaskActivity_taskDescriptionEditText"
			style="@style/EditTextStyle.Restrictive.Description"
			android:hint="@string/hint_taskDescription"
			android:inputType="textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<TableLayout
		style="@style/TableStyle"
		android:layout_margin="5dp"
		android:stretchColumns="1">

		<TableRow
			style="@style/TableStyle.Row">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="0"
				android:layout_gravity="start|center"
				android:text="@string/hint_assigneeSpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/createTaskActivity_assigneeSpinner"
				style="@style/SpinnerStyle"
				android:prompt="@string/spinner_taskAssignee"/>

		</TableRow>

		<TableRow
			android:id="@+id/createTaskActivity_projectSpinnerRow"
			style="@style/TableStyle.Row"
			android:visibility="invisible">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="0"
				android:layout_gravity="start|center"
				android:text="@string/hint_projectSpinner"/>

			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/createTaskActivity_projectSpinner"
				style="@style/SpinnerStyle"
				android:prompt="@string/spinner_taskProject"/>

		</TableRow>

	</TableLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom|center"
		android:orientation="vertical">

		<Button
			android:id="@+id/createTaskActivity_createTaskButton"
			style="@style/ButtonStyle.Sized"
			android:enabled="false"
			android:text="@string/button_createTask"/>


	</LinearLayout>

</LinearLayout>