<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="25dp"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:drawableEnd="@drawable/placeholder128x128"
		android:drawablePadding="10dp"
		android:gravity="center"
		android:text="@string/app_name"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/app_subtitle"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<android.support.v4.widget.Space
		android:layout_width="match_parent"
		android:layout_height="50dp"/>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/loginActivity_usernameEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:digits="@string/alphaNumericCharacters"
			android:hint="@string/hint_username"
			android:inputType="textNoSuggestions"
			android:maxLength="20"
			android:singleLine="true"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/loginActivity_passwordEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:digits="@string/alphaNumericCharacters"
			android:fontFamily="sans-serif"
			android:hint="@string/hint_password"
			android:inputType="textPassword|textNoSuggestions"
			android:maxLength="20"
			android:singleLine="true"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/loginActivity_loginButton"
		style="@style/buttonApperance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="20dp"
		android:enabled="false"
		android:text="@string/button_login"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textView_userInstruction_login"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="italic"/>

		<Button
			android:id="@+id/loginActivity_registerButton"
			style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="sans-serif"
			android:text="@string/button_register"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

</LinearLayout>


