<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="20dp"
	android:orientation="vertical">

	<TextView
		style="@style/TextStyle"
		android:layout_marginBottom="20dp"
		android:text="@string/textView_registerInstructions"/>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_usernameEditText"
			style="@style/EditTextStyle.Restrictive"
			android:hint="@string/hint_username"
			android:inputType="textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_emailEditText"
			style="@style/EditTextStyle"
			android:layout_marginTop="10dp"
			android:hint="@string/hint_email"
			android:inputType="textEmailAddress|textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_passwordEditText"
			style="@style/EditTextStyle.Restrictive"
			android:layout_marginTop="10dp"
			android:hint="@string/hint_password"
			android:inputType="textPassword|textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_confirmPasswordEditText"
			style="@style/EditTextStyle.Restrictive"
			android:layout_marginTop="10dp"
			android:hint="@string/hint_confirmPassword"
			android:inputType="textPassword|textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="35dp"
		android:layout_marginTop="20dp">

		<Button
			android:id="@+id/registerActivity_createAccountButton"
			style="@style/ButtonStyle"
			android:layout_centerInParent="true"
			android:enabled="false"
			android:text="@string/button_createAccount"/>

		<com.github.ybq.android.spinkit.SpinKitView
			android:id="@+id/registerActivity_loadingProgressBar"
			style="@style/SpinKitView.Large.WanderingCubes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:visibility="gone"
			app:SpinKit_Color="@color/colorAccent"/>

	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<TextView
			style="@style/AppTheme"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textView_userInstruction_register"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/colorTextPrimary"
			android:textStyle="italic"/>

		<Button
			android:id="@+id/registerActivity_returnToLoginButton"
			style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="sans-serif"
			android:text="@string/button_login"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

</LinearLayout>