<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/projectBoardFragment_taskCard"
	style="@style/CardStyle">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:id="@+id/projectBoardFragment_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="150dp"
			android:orientation="vertical">

			<TextView
				android:id="@+id/projectBoardFragment_taskCard_taskName"
				style="@style/TextStyle.Title"
				android:maxLines="1"
				android:text="@string/textView_task"
				android:textColor="@color/windowBackground"
				android:textSize="@dimen/baseTextSize"/>

			<TextView
				android:id="@+id/projectBoardFragment_taskCard_assigneeName"
				style="@style/TextStyle"
				android:maxLines="1"
				android:text="@string/textView_assignee"
				android:textColor="@color/windowBackground"/>

		</LinearLayout>

		<TextView
			android:id="@+id/projectBoardFragment_taskCard_priorityName"
			style="@style/TextStyle"
			android:layout_centerVertical="true"
			android:layout_toEndOf="@id/projectBoardFragment_layout"
			android:gravity="end"
			android:text="@string/textView_priority"
			android:textColor="@color/windowBackground"/>

		<TextView
			android:id="@+id/projectBoardFragment_taskCard_noTasks"
			style="@style/TextStyle"
			android:layout_centerInParent="true"
			android:gravity="center"
			android:text="@string/textView_noTasksFound"
			android:textColor="@color/windowBackground"
			android:visibility="gone"/>

	</RelativeLayout>

</android.support.v7.widget.CardView>