<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="20dp"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="match_parent" android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="20dp"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/projectInfoActivity_projectNameEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:clickable="false"
					android:cursorVisible="false"
					android:digits="@string/alphaNumericCharacters"
					android:editable="false"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:hint="@string/hint_projectName"
					android:inputType="textNoSuggestions"
					android:maxLength="20"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/projectInfoActivity_projectDescriptionEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/projectInfoActivity_projectNameEditText"
					android:layout_marginBottom="40dp"
					android:clickable="false"
					android:cursorVisible="false"
					android:digits="@string/alphaNumericCharacters"
					android:focusable="false"
					android:focusableInTouchMode="false"
					android:gravity="top|left"
					android:hint="@string/hint_projectDescription"
					android:inputType="textNoSuggestions"
					android:maxLength="128"
					android:maxLines="6"
					android:scrollbars="vertical"/>

			</android.support.design.widget.TextInputLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_gravity="start"
					android:layout_weight="1"
					android:orientation="vertical">

					<TextView
						android:id="@+id/projectInfoActivity_columnNameTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Column Names:"/>

					<ListView
						android:id="@+id/projectInfoActivity_columnNamesList"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start"
						android:background="@color/colorAccent"
						tools:listheader="@layout/list_header_columns"
						tools:listitem="@layout/list_item_columns"/>

					<!--<com.woxthebox.draglistview.DragListView-->
					<!--android:id="@+id/projectInfoActivity_columnNamesList"-->
					<!--android:layout_width="wrap_content"-->
					<!--android:layout_height="wrap_content"-->
					<!--android:layout_gravity="start"-->
					<!--android:background="@color/colorAccent"-->
					<!--tools:listheader="@layout/list_header_columns"-->
					<!--tools:listitem="@layout/list_item_columns"/>-->

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="end"
					android:layout_weight="1"
					android:orientation="vertical">

					<Button
						android:id="@+id/projectInfoActivity_addColumnButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:layout_marginBottom="5dp"
						android:minWidth="150dp"
						android:text="@string/button_addColumn"/>

					<Button
						android:id="@+id/projectInfoActivity_deleteColumnButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:layout_marginBottom="40dp"
						android:minWidth="150dp"
						android:text="@string/button_removeColumn"/>

					<Button
						android:id="@+id/projectInfoActivity_editProjectButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:layout_marginBottom="5dp"
						android:minWidth="150dp"
						android:text="@string/button_editProject"/>

					<Button
						android:id="@+id/projectInfoActivity_saveProjectButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:layout_marginBottom="5dp"
						android:minWidth="150dp"
						android:text="@string/button_saveProject"
						android:visibility="gone"/>

					<Button
						android:id="@+id/projectInfoActivity_deleteProjectButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:minWidth="150dp"
						android:text="@string/button_deleteProject"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>